--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="./avatar.png" alt="avatar" class="header__avatar" />
       <div class="header__textContainer">
         <h1 class="header__title">Булат Зиганшин</h1>
-        <h3 class="header__subtitle">QA Student</h3>
+        <h3 class="header__subtitle">QA STUDENT</h3>
       </div>
     </header>
     <main>
